# aoc

./: .gitignore  LICENSE  setup.cfg  setup.py
2015/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  main.py
2018/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day16.py  main.py
2019/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  main.py  pyproject.toml
2020/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day20b.py  day21.py  day22.py  day23.py  (+3 more)
rust-2020/: Cargo.toml  inputs
rust-2020/benches/: aoc.rs
rust-2020/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day15.rs  day16.rs  day19.rs  day20.rs  day23.rs  day24.rs  day25.rs  lib.rs  main.rs
rust-2022/: Cargo.toml
rust-2022/benches/: aoc.rs
rust-2022/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day11.rs  day12.rs  day16.rs  main.rs
(+87 files in other folders)
