[package]
name = "aoc"
version = "0.1.0"
authors = ["Lawrence Mitchell <lawrence@wence.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "^0.9.0"
criterion = "^0.3.3"
lazy_static = "^1.4.0"
regex = "^1.4.2"
atoi = "^0.4"
ndarray = "^0.14"
paste = "^1.0.4"

[[bench]]
name = "aoc"
harness = false
