[package]
name = "aoc"
version = "0.1.0"
authors = ["Lawrence Mitchell <lawrence@wence.uk>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "^0.10.5"
criterion = "^0.4.0"
anyhow = "1.0"
bytemuck = "^1.12.3"
arrayvec = "0.7"

[[bench]]
name = "aoc"
harness = false
